# micro-bng-2.1-license-ipoe

./: CMakeLists.txt  README  README.md  config.h.in
bng-cmd/: CMakeLists.txt  bng-cmd.1  bng_cmd.c
cmake/: cpack.cmake
cmake/centos/: centos.cmake
cmake/debian/: conffiles  debian.cmake  postinst
contrib/: micro-bng.service
contrib/debian/: micro-bng-default  micro-bng-init
contrib/gentoo/net-dialup/micro-bng/: micro-bng-1.3.5.ebuild  micro-bng-9999.ebuild
contrib/gentoo/net-dialup/micro-bng/files/: micro-bngd-confd  micro-bngd-init
crypto/: CMakeLists.txt  tomcrypt_cipher.h
micro-bngd/: CMakeLists.txt  base32.c  base32.h  ca.crt  ca.key  ifcfg.c  ipdb.h  license.c  license.h  log.c  main.c  micro-bng.conf  micro-bng.conf.5  myhashtable.c  myhashtable.h  session.c  vppapi.c  vppapi.h
micro-bngd/auth/: CMakeLists.txt  auth_chap_md5.c  auth_pap.c
micro-bngd/backup/: CMakeLists.txt
micro-bngd/cli/: cli.c  show_sessions.c  std_cmd.c  telnet.c
micro-bngd/ctrl/ipoe/: CMakeLists.txt  dhcpv4.c  dhcpv4.h  ipoe.c  ipoe_netlink.c
micro-bngd/ctrl/l2tp/: CMakeLists.txt  l2tp.c
micro-bngd/ctrl/pppoe/: CMakeLists.txt  cli.c  disc.c  dpado.c  mac_filter.c  pppoe.c  pppoe.h
micro-bngd/ctrl/pptp/: CMakeLists.txt
micro-bngd/ctrl/sstp/: CMakeLists.txt  sstp.c
micro-bngd/extra/: CMakeLists.txt  pppd_compat.c
micro-bngd/extra/net-snmp/: CMakeLists.txt  MICRO-BNG-MIB.txt  agent.c  sessionTable.h  sessionTable_data_access.c  sessionTable_data_access.h  sessionTable_data_get.c  sessionTable_data_get.h  sessionTable_interface.c
micro-bngd/include/: ap_session.h  myhashtable.h  ppp.h  vppapi.h
micro-bngd/ipv6/: CMakeLists.txt  dhcpv6.c  nd.c
micro-bngd/libnetlink/: iputils.c  libnetlink.c
micro-bngd/logs/: CMakeLists.txt  log_file.c  log_syslog.c
micro-bngd/lua/: CMakeLists.txt
micro-bngd/ppp/: CMakeLists.txt  ccp_mppe.c  dhcpv6.c  dhcpv6.h  ipcp_opt_dns.c  ipcp_opt_wins.c  nd.c  ppp.c  ppp.h  ppp_ccp.c  ppp_ipcp.c  ppp_ipv6cp.c  ppp_lcp.c
micro-bngd/radius/: CMakeLists.txt  acct.c  attr_defs.h  dm_coa.c  lua.c  packet.c  radius.c  req.c  serv.c
micro-bngd/radius/dict/: dictionary  dictionary.bng  dictionary.microbng
micro-bngd/shaper/: CMakeLists.txt  shaper.c
micro-bngd/triton/: CMakeLists.txt  md.c  mempool.c  timer.c  triton.c  triton.h
micro-bngd/vlan-mon/: CMakeLists.txt  vlan_mon.c
tests/: README.md  conftest.py
tests/bng-cmd/: test_cmd_basic.py  test_real_commands.py
tests/common/: micro_bngd_process.py
tests/micro-bngd/: test_basic.py
tests/micro-bngd/ipoe/: conftest.py
tests/micro-bngd/ipoe/dhcpv4/: test_ipoe_shared_session_wo_auth.py
tests/micro-bngd/pppoe/: conftest.py  test_pppoe_disc.py  test_pppoe_pado_delay.py  test_pppoe_session_wo_auth.py  test_pppoe_vlan_mon.py
